# ecommerce-data-pipeline

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml  dbt.yml
airflow/: Dockerfile  requirements.txt
configs/: dq_rules.yaml  pipeline_config.yaml  tables_schema.yaml
dags/: cdc_daily_dag.py  common_callbacks.py  ecommerce_pipeline_dag.py
data/audit/: .gitkeep
data/bronze/: .gitkeep
data/cdc/: .gitkeep
data/gold/: .gitkeep
data/raw/: .gitkeep
data/silver/: .gitkeep
dbt/: README.md  dbt_project.yml  profiles.yml
dbt/macros/: cents_to_brl.sql
dbt/tests/: assert_revenue_non_negative.sql
docker/: dbt.Dockerfile  runtime-requirements.txt  spark.Dockerfile
docs/: architecture.md  data_dictionary.md  data_flow.md  deployment.md  implementation_guide.md  screenshots.md  setup.md
docs/images/: .gitkeep
monitoring/: __init__.py  lineage.md  publish_audit.py
monitoring/dashboard/: dq_dashboard.py
pyspark_jobs/: __init__.py
pyspark_jobs/bronze/: __init__.py  ingest_raw.py
pyspark_jobs/cdc/: __init__.py  cdc_processor.py
pyspark_jobs/common/: __init__.py  audit.py  bq_loader.py  config_loader.py  exceptions.py  io_utils.py  logger.py  spark_session.py
scripts/: download_data.sh  generate_cdc_files.py  run_local_pipeline.sh
secrets/: .gitkeep
sql/: 01_create_datasets.sql  02_gold_ddl.sql  03_audit_ddl.sql  04_reporting_views.sql
tests/: conftest.py  test_business_rules.py  test_cdc.py  test_cleaning.py  test_config_loader.py  test_dq_checks.py
(+140 files in other folders)
