[project]
name = "ecommerce-data-pipeline"
version = "1.0.0"
description = "End-to-end E-Commerce Data Engineering pipeline (Olist) — PySpark, BigQuery, Airflow, dbt, CDC."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["dbt/target", "data", "logs"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]   # line length handled by black

[tool.black]
line-length = 100
target-version = ["py311"]
extend-exclude = "dbt/target|data|logs"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["pyspark_jobs"]
omit = ["*/__init__.py"]
